--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,2 @@
 language: objective-c
-before_install:
-      - cd test && npm update && (node server.js &)
-script: "cd test && xcodebuild && ./build/Debug/test-runner"
+script: make test
