--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "deps/Kiwi/Kiwi"]
 	path = deps/Kiwi/Kiwi
-	url = git@github.com:allending/Kiwi.git
+	url = git@github.com:kiwi-bdd/Kiwi.git
 [submodule "build/gyp"]
 	path = build/gyp
 	url = https://chromium.googlesource.com/external/gyp.git
